Fix overlapping animation keyframes

--- a/src/components/charts/scatter-plot/scatter-plot-styles.module.scss
+++ b/src/components/charts/scatter-plot/scatter-plot-styles.module.scss
@@ -111,7 +111,7 @@ $chart-margin: 14px;
     animation-timing-function:cubic-bezier(1,.01,.91,.46);
   }
   50% {
-    r: 1%;
+    r: 1.1%;
     opacity: 0.2;
     animation-timing-function: linear;
   }
